; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/jit/llvm/extr_llvmjit.c_llvm_resolve_symbol.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/jit/llvm/extr_llvmjit.c_llvm_resolve_symbol.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@WARNING = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [26 x i8] c"failed to resolve name %s\00", align 1
@ERROR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*)* @llvm_resolve_symbol to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @llvm_resolve_symbol(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %8 = load i8*, i8** %3, align 8
  %9 = call i32 @llvm_split_symbol_name(i8* %8, i8** %7, i8** %6)
  %10 = load i8*, i8** %6, align 8
  %11 = call i32 @Assert(i8* %10)
  %12 = load i8*, i8** %7, align 8
  %13 = icmp ne i8* %12, null
  br i1 %13, label %14, label %18

14:                                               ; preds = %2
  %15 = load i8*, i8** %7, align 8
  %16 = load i8*, i8** %6, align 8
  %17 = call i64 @load_external_function(i8* %15, i8* %16, i32 1, i32* null)
  store i64 %17, i64* %5, align 8
  br label %21

18:                                               ; preds = %2
  %19 = load i8*, i8** %3, align 8
  %20 = call i64 @LLVMSearchForAddressOfSymbol(i8* %19)
  store i64 %20, i64* %5, align 8
  br label %21

21:                                               ; preds = %18, %14
  %22 = load i8*, i8** %6, align 8
  %23 = call i32 @pfree(i8* %22)
  %24 = load i8*, i8** %7, align 8
  %25 = icmp ne i8* %24, null
  br i1 %25, label %26, label %29

26:                                               ; preds = %21
  %27 = load i8*, i8** %7, align 8
  %28 = call i32 @pfree(i8* %27)
  br label %29

29:                                               ; preds = %26, %21
  %30 = load i64, i64* %5, align 8
  %31 = icmp ne i64 %30, 0
  br i1 %31, label %36, label %32

32:                                               ; preds = %29
  %33 = load i32, i32* @WARNING, align 4
  %34 = load i8*, i8** %3, align 8
  %35 = call i32 @elog(i32 %33, i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str, i64 0, i64 0), i8* %34)
  br label %36

36:                                               ; preds = %32, %29
  %37 = load i64, i64* %5, align 8
  %38 = trunc i64 %37 to i32
  ret i32 %38
}

declare dso_local i32 @llvm_split_symbol_name(i8*, i8**, i8**) #1

declare dso_local i32 @Assert(i8*) #1

declare dso_local i64 @load_external_function(i8*, i8*, i32, i32*) #1

declare dso_local i64 @LLVMSearchForAddressOfSymbol(i8*) #1

declare dso_local i32 @pfree(i8*) #1

declare dso_local i32 @elog(i32, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
